Carousel alignment fixed

--- a/css/style2.css
+++ b/css/style2.css
@@ -303,10 +303,10 @@ pre,
 	height: 180px;
 }
 .owl-carousel .owl-stage-outer {
-	height: 180px !important;
+	height: 200px !important;
 }
 .owl-carousel .owl-stage {
-	height: 150px !important;
+	height: 200px !important;
 	display: flex;
 	align-items: center;
 }
